# Local-TTS

./: .env.example  .gitignore  README.md  pyproject.toml
prompts/: jerry-job-done.md
scripts/: bootstrap.sh  run_server.sh
src/local_tts/: __init__.py  app.py  config.py
src/local_tts/backends/: __init__.py  chatterbox_backend.py
